# file-triage

./: .gitignore  README.md  folder.alias  folder.hide  folder.ignore  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
Casks/: file-triage.rb
docs/: BACKLOG.md  CODING_STANDARDS.md  DETAILED_DESIGN.md  DEVELOPMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  EXPLORER_RULES.md  FUNCTIONAL_CHEATSHEET.md  FUNCTIONAL_SPECIFICATION.md  ISSUES.md  PSEUDO_LOGIC.md  README.md  REFACTOR_ITERATION_PLAN.md  explorer_api_contract.md
electron/: main.js
src/file_triage/: __init__.py  __main__.py  cli.py  config.py  scan.py  semantic_triage.py
src/file_triage/explorer/: __init__.py  app.py  domain.py  errors.py  listing_helpers.py  roots.py  types.py  validation.py
src/file_triage/explorer/routes/: __init__.py  preview.py  rules.py
src/file_triage/explorer/static/: app.js  index.html  style.css
src/file_triage/meta/: __init__.py  accessor.py  db.py  seed_rules.py
tests/: __init__.py  test_domain.py  test_explorer_api.py  test_listing_helpers.py
